# review-orchestrator

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  README.md  docker-compose.self_host.yaml  docker-compose.yaml  pyproject.toml
deploy/nginx/: review-orchestrator.conf.template
deploy/openhands/: migrate_sqlite_to_postgres.py
deploy/postgres/: provision-openhands-db.sh
docs/: agent-task-architecture-redesign_zh.md  architecture_zh.md  bdd-e2e.md  deployment.md  mention-command-design.md  new-platform-onboarding_zh.md  observability-api.md  observability-deployment.md  pi-agent-chain-verification.md  pi-agent-framework_zh.md  platform-extension.md  platform-extension_zh.md  reviewbot-smoke-test.md  test-coverage-audit_zh.md
pi-agent-runtime/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
pi-agent-runtime/config/: models.example.json
pi-agent-runtime/environment-template/: README.md
pi-agent-runtime/src/: server.ts
pi-agent-runtime/tests/: agent-framework.test.mjs  container-isolation-smoke.mjs  runtime-tools.test.mjs
scripts/: check_platform_permissions.py
src/review_orchestrator/: __init__.py  _compat.py  api.py  comments.py  config.py  dashboard.py  db.py  github.py  github_auth.py  gitlab.py  main.py  models.py  observability.py  openhands.py  pi_agent.py  platform_diagnostics.py  provider_plugins.py  providers.py  reconciliation.py  review_results.py  schemas.py  (+5 more)
tests/: __init__.py  conftest.py  factories.py  test_agent_commands.py  test_agent_presets.py  test_agent_runtime_migration.py  test_api.py  test_architecture_contract.py  test_check_platform_permissions_script.py  test_delivery_outbox.py  test_github_auth.py  test_github_publishing.py  test_nginx_config.py  test_observability.py  test_openhands.py  test_openhands_migration.py  test_pi_agent.py  test_platform_diagnostics.py  test_provider_core.py  test_provider_plugins.py  test_providers.py  test_review_comment_gate.py  test_review_results.py  test_review_session_services.py  test_scheduler.py  test_self_host_compose.py  test_service_contracts.py  test_session_archive.py  test_worker.py  test_worker_cli.py  test_workspaces.py
(+63 files in other folders)
